product create feature with image upload service multer and cloudnary

--- a/e-comm-2.0/backend/public/stylesheets/style.css
+++ b/e-comm-2.0/backend/public/stylesheets/style.css
@@ -6,3 +6,12 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+
+.canterpage  {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+}
