moved serever state to react Query

--- a/mega projects/e-comm/frontend/src/css/genral.module.css
+++ b/mega projects/e-comm/frontend/src/css/genral.module.css
@@ -24,3 +24,11 @@
     padding: 10px ;
 
 }
+
+
+.cartbox {
+    margin: 50px ;
+    width: 200px;
+    border: 1px solid red ;
+    padding: 20px;
+}
