--- a/mega projects/e-comm/frontend/src/css/genral.module.css
+++ b/mega projects/e-comm/frontend/src/css/genral.module.css
@@ -80,3 +80,57 @@
 .Dash_product {
     width: 100%;
 }
+
+
+/* Define your styles using modular CSS, adjust as needed */
+/* S.module.css */
+
+.payment_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .container {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .label {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: black;
+  }
+  
+  .payment_card {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 6px;
+    width: 100%;
+  }
+  
+  .button {
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .button:hover {
+    background-color: white;
+    color: black;
+  }
+  
+  /* Import these classes into your component */
+  
